<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcome_back"
        android:layout_marginTop="20dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_marginTop="20dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/forgot_password"
        android:textColor="@color/teal_200"
        app:layout_constraintTop_toTopOf="@id/checkbox"
        app:layout_constraintBottom_toBottomOf="@id/checkbox"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:text="@string/remember_me"
        android:padding="10dp"
        android:button="@drawable/checkbox"/>



    <Button
        android:id="@+id/login2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/new_user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:backgroundTint="@color/teal_200"
        android:onClick="confirmInput"
        />


    <View
        android:id="@+id/line"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/line"
        android:text="@string/new_user"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/line"
        android:text="@string/sign_up"
        android:textColor="@color/teal_200"/>


</androidx.constraintlayout.widget.ConstraintLayout>