<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/detailsImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/image2"
        />

    <TextView
        android:id="@+id/detailsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailsImage"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="25dp"
        android:text="@string/name_surname"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detailsName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/actively_looking"
        android:textSize="15sp"
        android:padding="20dp"/>

   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintLeft_toRightOf="@id/status"
       app:layout_constraintTop_toTopOf="@id/status"
       app:layout_constraintBottom_toBottomOf="@id/status"
       android:src="@drawable/ic_baseline_done_24"
       android:layout_marginLeft="30dp"
       android:background="@color/teal_200"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/status"
        android:padding="20dp"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applied"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_98"
                android:textSize="30sp"
                android:textStyle="bold"
                android:padding="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviewed"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_73"
                android:textSize="30sp"
                android:textStyle="bold"
                android:padding="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacted"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_19"
                android:textSize="30sp"
                android:textStyle="bold"
                android:padding="10dp"
                />

        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>