<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_to_your_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="20dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textview1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/get_a_new_experience_of_imagination"
        android:textSize="30sp"
        android:padding="20dp"
        android:textColor="@color/teal_200"
        />

    <ImageView
        android:id="@+id/imageview1"
        android:layout_width="390dp"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@+id/textview2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/undraw_wishes_icyp"
        />



        <Button
        android:id="@+id/login1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintTop_toBottomOf="@id/imageview1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/terms_and_conditions"
        android:textSize="11sp"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>